Rated Excellent on Trustpilot aligned , Solve font issue

--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -21,12 +21,25 @@
   font-weight: normal;
   font-style: normal;
 }
-/* Montserrat Font */
+
+/* Montserrat Font Bold */
 @font-face {
   font-family: "Montserrat";
-  src: url("../assets/fonts/Montserrat-VariableFont_wght.ttf") format("woff2"),
-    url("../assets/fonts/Montserrat-VariableFont_wght.ttf") format("woff"),
-    url("../assets/fonts/Montserrat-VariableFont_wght.ttf") format("truetype");
-  font-weight: 700;
+  src: url("../assets/fonts/Montserrat-Bold.ttf") format("woff2");
+  font-weight: bold;
+  font-style: normal;
+}
+/* Montserrat Font Medium */
+@font-face {
+  font-family: "Montserrat";
+  src: url("../assets/fonts/Montserrat-Medium.ttf") format("woff2");
+  font-weight: 500;
+  font-style: normal;
+}
+/* Montserrat Font Regular */
+@font-face {
+  font-family: "Montserrat";
+  src: url("../assets/fonts/Montserrat-Regular.ttf") format("woff2");
+  font-weight: normal;
   font-style: normal;
 }
