--- a/styles/output.css
+++ b/styles/output.css
@@ -36,16 +36,38 @@
   font-style: normal;
 }
 
-/* Montserrat Font */
+/* Montserrat Font Bold */
 
 @font-face {
   font-family: "Montserrat";
 
-  src: url("../assets/fonts/Montserrat-VariableFont_wght.ttf") format("woff2"),
-    url("../assets/fonts/Montserrat-VariableFont_wght.ttf") format("woff"),
-    url("../assets/fonts/Montserrat-VariableFont_wght.ttf") format("truetype");
+  src: url("../assets/fonts/Montserrat-Bold.ttf") format("woff2");
 
-  font-weight: 700;
+  font-weight: bold;
+
+  font-style: normal;
+}
+
+/* Montserrat Font Medium */
+
+@font-face {
+  font-family: "Montserrat";
+
+  src: url("../assets/fonts/Montserrat-Medium.ttf") format("woff2");
+
+  font-weight: 500;
+
+  font-style: normal;
+}
+
+/* Montserrat Font Regular */
+
+@font-face {
+  font-family: "Montserrat";
+
+  src: url("../assets/fonts/Montserrat-Regular.ttf") format("woff2");
+
+  font-weight: normal;
 
   font-style: normal;
 }
@@ -896,6 +918,10 @@ video {
   width: 2.5rem;
 }
 
+.w-24 {
+  width: 6rem;
+}
+
 .w-36 {
   width: 9rem;
 }
@@ -928,8 +954,16 @@ video {
   width: 24rem;
 }
 
+.w-\[17px\] {
+  width: 17px;
+}
+
 .w-\[597px\] {
   width: 597px;
+}
+
+.w-\[88px\] {
+  width: 88px;
 }
 
 .w-fit {
@@ -939,26 +973,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-7 {
-  width: 1.75rem;
-}
-
-.w-2 {
-  width: 0.5rem;
-}
-
-.w-5 {
-  width: 1.25rem;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[17px\] {
-  width: 17px;
 }
 
 .max-w-4xl {
@@ -975,6 +989,10 @@ video {
 
 .max-w-\[340px\] {
   max-width: 340px;
+}
+
+.max-w-\[345px\] {
+  max-width: 345px;
 }
 
 .max-w-\[350px\] {
@@ -1011,54 +1029,6 @@ video {
 
 .max-w-full {
   max-width: 100%;
-}
-
-.max-w-\[2140\] {
-  max-width: 2140;
-}
-
-.max-w-\[214px\] {
-  max-width: 214px;
-}
-
-.max-w-\[224px\] {
-  max-width: 224px;
-}
-
-.max-w-\[254px\] {
-  max-width: 254px;
-}
-
-.max-w-\[294px\] {
-  max-width: 294px;
-}
-
-.max-w-\[314px\] {
-  max-width: 314px;
-}
-
-.max-w-\[310px\] {
-  max-width: 310px;
-}
-
-.max-w-\[290px\] {
-  max-width: 290px;
-}
-
-.max-w-\[300px\] {
-  max-width: 300px;
-}
-
-.max-w-\[305px\] {
-  max-width: 305px;
-}
-
-.max-w-\[315px\] {
-  max-width: 315px;
-}
-
-.max-w-\[345px\] {
-  max-width: 345px;
 }
 
 .shrink-0 {
@@ -1124,6 +1094,10 @@ video {
 
 .items-start {
   align-items: flex-start;
+}
+
+.items-end {
+  align-items: flex-end;
 }
 
 .items-center {
@@ -1813,10 +1787,22 @@ html {
     max-width: max-content;
   }
 
+  .vsm\:flex-row {
+    flex-direction: row;
+  }
+
+  .vsm\:items-center {
+    align-items: center;
+  }
+
   .vsm\:space-x-4 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-x-reverse: 0;
     margin-right: calc(1rem * var(--tw-space-x-reverse));
     margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .vsm\:p-5 {
+    padding: 1.25rem;
   }
 
   .vsm\:px-4 {
@@ -1933,8 +1919,8 @@ html {
     max-width: 720px;
   }
 
-  .sm\:flex-row {
-    flex-direction: row;
+  .sm\:flex-col {
+    flex-direction: column;
   }
 
   .sm\:gap-2 {
